[workspace]
resolver = "3"
members = [
    "crates/*",
    "examples/agent",
]
exclude = [
    "archived"
]

[workspace.lints.clippy]
dbg_macro = "forbid"
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"
expect_used = "deny"
expect_fun_call = "deny"
indexing_slicing = "deny"
panic = "deny"
panic_in_result_fn = "deny"
todo = "forbid"
unimplemented = "forbid"
unreachable = "deny"
unwrap_used = "deny"

[profile.release]
lto = true
opt-level = "s"


[workspace.package]
version = "0.38.2"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.102"
arrow-array = "58"
as-any = "0.3.2"
assert_fs = "1.1.3"
async-stream = "0.3.6"
axum = "0.8.4"
aws-config = { version = "1.8.5", default-features = false }
aws-sdk-bedrockruntime = { version = "1.124.0", default-features = false }
aws-smithy-types = "1.3.2"
base64 = "0.22.1"
bytes = "1.10.1"
chrono = "0.4"
convert_case = "0.11.0"
deluxe = "0.5.0"
deranged = "=0.5.8"
dotenvy = "0.15.7"
epub = "2.1.4"
ethers = "2.0.14"
eventsource-stream = "0.2.3"
fastembed = { version = "4.9.1", default-features = false }
fastrand = "2.3.0"
futures = "0.3.32"
futures-timer = "3.0.3"
getrandom = "0.2"
glob = "0.3.2"
google-cloud-auth = "1.10"
google-cloud-aiplatform-v1 = { version = "1.11.0", default-features = false, features = [
    "prediction-service",
] }
http = "1.3.1"
httpmock = "0.8.3"
hyper-util = "0.1.14"
indexmap = "2.14.0"
indoc = "2.0.6"
lancedb = { version = "0.30", default-features = false }
log = "0.4.27"
lopdf = "0.40.0"
mime = "0.3.17"
mime_guess = "2.0.5"
mongodb = "3.7.0"
nanoid = "0.4"
neo4rs = "0.8.0"
opentelemetry = "0.32.0"
opentelemetry-otlp = "0.32.0"
opentelemetry_sdk = "0.32.1"
ordered-float = "5.0.0"
pgvector = "0.4"
pin-project-lite = "0.2.16"
proc-macro2 = "1.0.95"
qdrant-client = { version = "1.14.0", default-features = false, features = [
    "serde",
] }
quick-xml = "0.40.1"
quote = "1.0.40"
rayon = "1.10.0"
redis = "1.2.1"
reqwest = { version = "0.13", default-features = false }
reqwest-middleware = { version = "0.5.2", default-features = false }
reqwest-retry = "0.9"
rmcp = "1.7.0"
url = "2.5"
rusqlite = "0.32"
scylla = "1.2.0"
schemars = "1.0.4"
serde = "1.0.219"
serde_yaml = "0.9.34"
serde_json = "1.0.150"
serde_path_to_error = "0.1.17"
sqlite-vec = "0.1"
sqlx = "0.8.6"
surrealdb = "3.0.2"
syn = "2.0.104"
serenity = "0.12.4"
term_size = "0.3.2"
testcontainers = "0.27"
textwrap = "0.16.2"
thiserror = "2.0.12"
tokio = "1.52.3"
tokio-rusqlite = { version = "0.6.0", default-features = false }
tokio-test = "0.4.4"
tokio-stream = "0.1.17"
tokio-tungstenite = { version = "0.28.0", default-features = false }
tonic = "0.14.6"
tonic-build = "0.14.6"
tonic-prost = "0.14.5"
tonic-prost-build = "0.14.6"
prost = "0.14.3"
tracing = "0.1.41"
tracing-futures = "0.2.5"
tracing-opentelemetry = "0.33.0"
tracing-subscriber = "0.3.19"
uuid = "1.17.0"
wasm-bindgen-futures = "0.4.54"
zerocopy = "0.8.50"

# Internal dependencies
rig-core = { version = "*", path = "crates/rig-core"}
rig = { version = "*", path = "crates/rig" }

[workspace.metadata.cargo-autoinherit]
# Skip cargo-autoinherit for these packages
exclude-members = ["crates/rig-core", "crates/rig-derive"]
