[package]
name = "rig-bedrock"
version = "0.2.0"
edition = { workspace = true }
license = "MIT"
readme = "README.md"
description = "AWS Bedrock model provider for Rig integration."

[dependencies]
rig-core = { workspace = true, features = ["image"] }
rig-derive = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
schemars = { workspace = true }
tracing = { workspace = true }
aws-config = { workspace = true, features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = { workspace = true }
aws-smithy-types = { workspace = true }
base64 = { workspace = true }
async-stream = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
