[package]
name = "rig-core"
version = "0.19.0"
edition = { workspace = true }
license = "MIT"
readme = "README.md"
description = "An opinionated library for building LLM powered applications."
repository = "https://github.com/0xPlaygrounds/rig"

[lib]
name = "rig"
path = "src/lib.rs"
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
as-any = { workspace = true }
async-stream = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
epub = { workspace = true, optional = true }
futures = { workspace = true }
glob = { workspace = true }
lopdf = { workspace = true, optional = true }
mime_guess = { workspace = true }
ordered-float = { workspace = true }
quick-xml = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
reqwest = { workspace = true, features = ["json", "stream", "multipart"] }
rig-derive = { version = "0.1.5", path = "rig-core-derive", optional = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
worker = { workspace = true, optional = true }
rmcp = { version = "0.5", optional = true, features = ["client"] }
reqwest-eventsource = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
anyhow = { workspace = true }
assert_fs = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio-test = { workspace = true }
serde_path_to_error = { workspace = true }
base64 = { workspace = true }

# Required for `rmcp` example
hyper-util = { version = "0.1.14", features = ["service", "server"] }
rmcp = { version = "0.5", features = [
    "client",
    "reqwest",                                  # required for some strange reason
    "transport-streamable-http-client",
    "transport-streamable-http-server-session",
    "transport-streamable-http-server",
    "transport-worker",
] }
axum = "0.8.4"


[features]
default = ["reqwest/default"]
all = ["derive", "pdf", "rayon"]
audio = []
image = []
derive = ["dep:rig-derive"]
pdf = ["dep:lopdf"]
epub = ["dep:epub", "dep:quick-xml"]
rayon = ["dep:rayon"]
worker = ["dep:worker"]
rmcp = ["dep:rmcp"]
socks = ["reqwest/socks"]
# Replace "default-tls" with "rustls-tls" in "reqwest/default"
reqwest-rustls = [
    "reqwest/rustls-tls",
    "reqwest/charset",
    "reqwest/http2",
    "reqwest/macos-system-configuration",
]

[[test]]
name = "embed_macro"
required-features = ["derive"]

[[example]]
name = "rag"
required-features = ["derive"]

[[example]]
name = "rag_ollama"
required-features = ["derive"]

[[example]]
name = "vector_search"
required-features = ["derive"]

[[example]]
name = "vector_search_cohere"
required-features = ["derive"]

[[example]]
name = "gemini_embeddings"
required-features = ["derive"]

[[example]]
name = "agent_with_moonshot"
required-features = ["derive"]

[[example]]
name = "pdf_agent"
required-features = ["derive", "pdf"]

[[example]]
name = "agent_with_together"
required-features = ["derive"]

[[example]]
name = "together_embeddings"
required-features = ["derive"]

[[example]]
name = "openai_audio_generation"
required-features = ["audio"]

[[example]]
name = "hyperbolic_audio_generation"
required-features = ["audio"]

[[example]]
name = "mistral_embeddings"
required-features = ["derive"]

[[example]]
name = "voyageai_embeddings"
required-features = ["derive"]

[[example]]
name = "rmcp"
required-features = ["rmcp"]

[[example]]
name = "request_hook"
