[package]
name = "rig-eternalai"
version = "0.2.5"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "EternalAI model provider Rig integration."
repository = "https://github.com/0xPlaygrounds/rig"

[dependencies]
rig-core = { path = "../rig-core", version = "0.11.1" }
ethers = "2.0.14"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tracing = "0.1.40"
schemars = "0.8.16"

[dev-dependencies]
anyhow = "1.0.75"
tokio = { version = "1.34.0", features = ["full"] }
tracing-subscriber = "0.3.18"
