[package]
name = "rig-eternalai"
version = "0.2.7"
edition = { workspace = true }
license = "MIT"
readme = "README.md"
description = "EternalAI model provider Rig integration."
repository = "https://github.com/0xPlaygrounds/rig"

[dependencies]
rig-core = { workspace = true }
ethers = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
schemars = { workspace = true }
async-stream = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true }
