[package]
name = "rig-fastembed"
version = "0.1.5"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Rig vector store index integration for Fastembed. https://github.com/Anush008/fastembed-rs"
repository = "https://github.com/0xPlaygrounds/rig"

[dependencies]
rig-core = { path = "../rig-core", version = "0.11.1" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tracing = "0.1.40"
schemars = "0.8.16"
fastembed = "4.4.0"

[dev-dependencies]
anyhow = "1.0.75"
tokio = { version = "1.34.0", features = ["full"] }

[[example]]
name = "vector_search"
required-features = ["rig-core/derive"]

[[example]]
name = "vector_search_local"
required-features = ["rig-core/derive"]
