[package]
name = "rig-fastembed"
version = "0.2.14"
edition = { workspace = true }
license = "MIT"
readme = "README.md"
description = "Rig vector store index integration for Fastembed. https://github.com/Anush008/fastembed-rs"
repository = "https://github.com/0xPlaygrounds/rig"

[dependencies]
rig-core = { path = "../rig-core", version = "0.23.0" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
schemars = { workspace = true }
fastembed = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[[example]]
name = "vector_search_fastembed"
required-features = ["rig-core/derive"]

[[example]]
name = "vector_search_fastembed_local"
required-features = ["rig-core/derive"]
